package com.ilike.bridge;

/**
 * 品牌
 */
public interface Brand {

    void open();
    void close();
    void call();

}
