@startuml

interface Brand
class Vivo
class XiaoMi
abstract class Phone
class FoldPhone
class UpRightPhone
class Client

Brand <|.up. Vivo
Brand <|.up. XiaoMi
Phone o-- Brand
Phone <|-up- FoldPhone
Phone <|-up- UpRightPhone
Phone <.. Client
Brand <.. Client
interface Brand{
  void call();
}

class Phone{
  -Brand brand;
}
@enduml